# palantype-tools

./: .gitignore  CHANGELOG.md  README.md  buildStenoDict.cabal  default.nix  entries-extra-algo.txt  entries-extra-by-frequency.txt  entries-extra.txt  exceptions.json5  extrawords.txt  hyphenated-checked-DE.txt  hyphenated-prepared.txt  palantype-tools.cabal  pperformance-osprocesses.sh  pperformance.sh  primitives.json5  runinparallel.sh  stack.yaml
app/: Args.hs  BuildDict.hs  Common.hs  Main.hs  MakeSteno.hs  RunPrepare.hs  Sort.hs  WCL.hs
src/Palantype/: Tools.hs
src/Palantype/Tools/: Collision.hs  Hyphenate.hs  Prepare.hs  Statistics.hs  Steno.hs  StenoCodeInfo.hs  StenoOptimizer.hs  Syllables.hs  TraceWords.hs
