cabal-version:      2.4
name:               palantype-tools
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Ruben Moor
maintainer:         ruben.moor@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Palantype.Tools.Statistics
        Palantype.Tools.Steno
        Palantype.Tools.Syllables

    build-depends:
        base ^>=4.13.0.0
      , aeson
      , bytestring
      , bytestring-trie
      , Chart
      , Chart-cairo
      , Chart-gtk3
      , containers
      , data-default
      , file-embed
      , hashable
      , lens
      , my-palantype
      , parsec
      , safe
      , text
      , text-show
      , unordered-containers
      , word8
    hs-source-dirs: src
    default-extensions:
        LambdaCase
        NoImplicitPrelude
        OverloadedStrings
    default-language: Haskell2010
    ghc-options:
      -Weverything

      -- enable the missing export lists warning to define proper interfaces
      -Wno-missing-export-lists
      -Wno-missing-import-lists
      -Wno-unsafe
      -Wno-safe
      -Wno-monomorphism-restriction
      -Wno-missing-local-signatures
      -Wno-all-missed-specialisations
      -Wno-missed-specialisations

executable palantype-ops
    main-is:          Main.hs

    other-modules:
        Args
      , WCL
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    build-depends:
        base ^>=4.13.0.0
      , aeson
      , async
      , clock
      , directory
      , filepath
      , formatting
      , my-palantype
      , optparse-applicative
      , palantype-tools
      , parsec
      , split
      , streamly
      , text
      , text-show
      , time
      , unordered-containers
    default-extensions:
        FlexibleContexts
        LambdaCase
        NoImplicitPrelude
        OverloadedStrings
        ScopedTypeVariables
    hs-source-dirs: app
    default-language: Haskell2010
    ghc-options:
      -- concurrency
      -threaded
      -rtsopts

      -- warnings
      -Weverything

      -- enable the missing export lists warning to define proper interfaces
      -Wno-missing-export-lists
      -Wno-missing-import-lists
      -Wno-unsafe
      -Wno-safe
      -Wno-monomorphism-restriction
      -Wno-missing-local-signatures
      -Wno-all-missed-specialisations
      -Wno-missed-specialisations
