cabal-version:      2.4
name:               palantype-tools
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Ruben Moor
maintainer:         ruben.moor@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Palantype.Tools.Statistics
        Palantype.Tools.Steno
        Palantype.Tools.Prepare
        Palantype.Tools.Collision
        Palantype.Tools.Hyphenate

    build-depends:
        base
      , aeson
      , bytestring
      , bytestring-trie
      , containers
      , data-default
      , lens
      , my-palantype
      , parsec
      , text
      , text-show
    hs-source-dirs: src
    default-extensions:
        LambdaCase
        NoImplicitPrelude
        OverloadedStrings
    default-language: Haskell2010
    ghc-options:
      -Weverything

      -- enable the missing export lists warning to define proper interfaces
      -Wno-missing-export-lists
      -Wno-missing-import-lists
      -Wno-unsafe
      -Wno-safe
      -Wno-missing-safe-haskell-mode
      -Wno-monomorphism-restriction
      -Wno-missing-local-signatures
      -Wno-all-missed-specialisations
      -Wno-missed-specialisations
      -Wno-prepositive-qualified-module

executable palantype-ops
    main-is:          Main.hs

    other-modules:
        Args
      , BuildDict
      , Common
      , WCL
      , RunPrepare
      , Sort

    build-depends:
        base
      , aeson
      , aeson-pretty
      , ansi-terminal
      , async
      , bytestring
      , clock
      , concurrent-extra
      , containers
      , deepseq
      , directory
      , filepath
      , formatting
      , hyphenation
      , my-palantype
      , optparse-applicative
      , palantype-tools
      , signal
      , text
      , text-show
      , time
    default-extensions:
        FlexibleContexts
        LambdaCase
        NoImplicitPrelude
        OverloadedStrings
        ScopedTypeVariables
    hs-source-dirs: app
    default-language: Haskell2010
    ghc-options:
      -threaded
      -- profiling
      -- -fprof-auto-top
      -fprof-auto

      -- concurrency
      -threaded
      -rtsopts

      -- warnings
      -Weverything

      -- enable the missing export lists warning to define proper interfaces
      -Wno-missing-export-lists
      -Wno-missing-import-lists
      -Wno-unsafe
      -Wno-safe
      -Wno-missing-safe-haskell-mode
      -Wno-monomorphism-restriction
      -Wno-missing-local-signatures
      -Wno-all-missed-specialisations
      -Wno-missed-specialisations
      -Wno-prepositive-qualified-module
